attached_assets/Pasted-IndentationError-File-C-Users-walsh-Desktop-VehicleTracker-pages-1-Vehicle-Inventory-py-line-36-1752505923284_1752505923284.txt
IndentationError: File "C:\Users\walsh\Desktop\VehicleTracker\pages\1_Vehicle_Inventory.py", line 367 vehicles_df = dm.load_vehicles() ^ IndentationError: expected an indented block after 'else' statement on line 365
Traceback:
File "C:\Users\walsh\AppData\Local\Programs\Python\Python311\Lib\site-packages\streamlit\runtime\scriptrunner\exec_code.py", line 128, in exec_func_with_error_handling
    result = func()
             ^^^^^^
File "C:\Users\walsh\AppData\Local\Programs\Python\Python311\Lib\site-packages\streamlit\runtime\scriptrunner\script_runner.py", line 667, in code_to_exec
    _mpa_v1(self._main_script_path)
File "C:\Users\walsh\AppData\Local\Programs\Python\Python311\Lib\site-packages\streamlit\runtime\scriptrunner\script_runner.py", line 165, in _mpa_v1
    page.run()
File "C:\Users\walsh\AppData\Local\Programs\Python\Python311\Lib\site-packages\streamlit\navigation\page.py", line 296, in run
    code = ctx.pages_manager.get_page_script_byte_code(str(self._page))
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
File "C:\Users\walsh\AppData\Local\Programs\Python\Python311\Lib\site-packages\streamlit\runtime\pages_manager.py", line 160, in get_page_script_byte_code
    return self._script_cache.get_bytecode(script_path)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
File "C:\Users\walsh\AppData\Local\Programs\Python\Python311\Lib\site-packages\streamlit\runtime\scriptrunner\script_cache.py", line 72, in get_bytecode
    filebody = magic.add_magic(filebody, script_path)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
File "C:\Users\walsh\AppData\Local\Programs\Python\Python311\Lib\site-packages\streamlit\runtime\scriptrunner\magic.py", line 45, in add_magic
    tree = ast.parse(code, script_path, "exec")
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
File "C:\Users\walsh\AppData\Local\Programs\Python\Python311\Lib\ast.py", line 50, in parse
    return compile(source, filename, mode, flags,
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
